Excel-CSV updated to show combined data

--- a/SampleData-Excel-CSV.ipynb
+++ b/SampleData-Excel-CSV.ipynb
@@ -34,7 +34,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 10,
+            "execution_count": 2,
             "source": [
                 "# Create DataFrame from scatch and populate it with test data\n",
                 "df_sampledata = pd.DataFrame(columns=['TEST_DATETIME', 'TEST_NUMBER', 'TEST_TEXT', 'RECORD_ADDED'])\n",
@@ -70,32 +70,32 @@
                     "data": {
                         "text/plain": [
                             "          TEST_DATETIME TEST_NUMBER                       TEST_TEXT  \\\n",
-                            "0   2021/08/25 08:04:43      961305  Record added August 25 of 2021   \n",
-                            "1   2021/08/25 08:04:43      455012  Record added August 25 of 2021   \n",
-                            "2   2021/08/25 08:04:43      541831  Record added August 25 of 2021   \n",
-                            "3   2021/08/25 08:04:43      220394  Record added August 25 of 2021   \n",
-                            "4   2021/08/26 08:04:43      156123  Record added August 26 of 2021   \n",
-                            "5   2021/08/26 08:04:43      528509  Record added August 26 of 2021   \n",
-                            "6   2021/08/26 08:04:43      917142  Record added August 26 of 2021   \n",
-                            "7   2021/08/26 08:04:43      227210  Record added August 26 of 2021   \n",
-                            "8   2021/08/27 08:04:43      988481  Record added August 27 of 2021   \n",
-                            "9   2021/08/27 08:04:43      771113  Record added August 27 of 2021   \n",
-                            "10  2021/08/27 08:04:43      174643  Record added August 27 of 2021   \n",
-                            "11  2021/08/27 08:04:43      452992  Record added August 27 of 2021   \n",
+                            "0   2021/08/25 08:42:43      428514  Record added August 25 of 2021   \n",
+                            "1   2021/08/25 08:42:43      904954  Record added August 25 of 2021   \n",
+                            "2   2021/08/25 08:42:43      629890  Record added August 25 of 2021   \n",
+                            "3   2021/08/25 08:42:43      326473  Record added August 25 of 2021   \n",
+                            "4   2021/08/26 08:42:43      815098  Record added August 26 of 2021   \n",
+                            "5   2021/08/26 08:42:43      301769  Record added August 26 of 2021   \n",
+                            "6   2021/08/26 08:42:43      879650  Record added August 26 of 2021   \n",
+                            "7   2021/08/26 08:42:43      737747  Record added August 26 of 2021   \n",
+                            "8   2021/08/27 08:42:43      140170  Record added August 27 of 2021   \n",
+                            "9   2021/08/27 08:42:43      246890  Record added August 27 of 2021   \n",
+                            "10  2021/08/27 08:42:43      848615  Record added August 27 of 2021   \n",
+                            "11  2021/08/27 08:42:43      813903  Record added August 27 of 2021   \n",
                             "\n",
                             "           RECORD_ADDED  \n",
-                            "0   2021/08/25 08:04:43  \n",
-                            "1   2021/08/25 08:04:43  \n",
-                            "2   2021/08/25 08:04:43  \n",
-                            "3   2021/08/25 08:04:43  \n",
-                            "4   2021/08/26 08:04:43  \n",
-                            "5   2021/08/26 08:04:43  \n",
-                            "6   2021/08/26 08:04:43  \n",
-                            "7   2021/08/26 08:04:43  \n",
-                            "8   2021/08/27 08:04:43  \n",
-                            "9   2021/08/27 08:04:43  \n",
-                            "10  2021/08/27 08:04:43  \n",
-                            "11  2021/08/27 08:04:43  "
+                            "0   2021/08/25 08:42:43  \n",
+                            "1   2021/08/25 08:42:43  \n",
+                            "2   2021/08/25 08:42:43  \n",
+                            "3   2021/08/25 08:42:43  \n",
+                            "4   2021/08/26 08:42:43  \n",
+                            "5   2021/08/26 08:42:43  \n",
+                            "6   2021/08/26 08:42:43  \n",
+                            "7   2021/08/26 08:42:43  \n",
+                            "8   2021/08/27 08:42:43  \n",
+                            "9   2021/08/27 08:42:43  \n",
+                            "10  2021/08/27 08:42:43  \n",
+                            "11  2021/08/27 08:42:43  "
                         ],
                         "text/html": [
                             "<div>\n",
@@ -125,87 +125,87 @@
                             "  <tbody>\n",
                             "    <tr>\n",
                             "      <th>0</th>\n",
-                            "      <td>2021/08/25 08:04:43</td>\n",
-                            "      <td>961305</td>\n",
+                            "      <td>2021/08/25 08:42:43</td>\n",
+                            "      <td>428514</td>\n",
                             "      <td>Record added August 25 of 2021</td>\n",
-                            "      <td>2021/08/25 08:04:43</td>\n",
+                            "      <td>2021/08/25 08:42:43</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>1</th>\n",
-                            "      <td>2021/08/25 08:04:43</td>\n",
-                            "      <td>455012</td>\n",
+                            "      <td>2021/08/25 08:42:43</td>\n",
+                            "      <td>904954</td>\n",
                             "      <td>Record added August 25 of 2021</td>\n",
-                            "      <td>2021/08/25 08:04:43</td>\n",
+                            "      <td>2021/08/25 08:42:43</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>2</th>\n",
-                            "      <td>2021/08/25 08:04:43</td>\n",
-                            "      <td>541831</td>\n",
+                            "      <td>2021/08/25 08:42:43</td>\n",
+                            "      <td>629890</td>\n",
                             "      <td>Record added August 25 of 2021</td>\n",
-                            "      <td>2021/08/25 08:04:43</td>\n",
+                            "      <td>2021/08/25 08:42:43</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>3</th>\n",
-                            "      <td>2021/08/25 08:04:43</td>\n",
-                            "      <td>220394</td>\n",
+                            "      <td>2021/08/25 08:42:43</td>\n",
+                            "      <td>326473</td>\n",
                             "      <td>Record added August 25 of 2021</td>\n",
-                            "      <td>2021/08/25 08:04:43</td>\n",
+                            "      <td>2021/08/25 08:42:43</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>4</th>\n",
-                            "      <td>2021/08/26 08:04:43</td>\n",
-                            "      <td>156123</td>\n",
+                            "      <td>2021/08/26 08:42:43</td>\n",
+                            "      <td>815098</td>\n",
                             "      <td>Record added August 26 of 2021</td>\n",
-                            "      <td>2021/08/26 08:04:43</td>\n",
+                            "      <td>2021/08/26 08:42:43</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>5</th>\n",
-                            "      <td>2021/08/26 08:04:43</td>\n",
-                            "      <td>528509</td>\n",
+                            "      <td>2021/08/26 08:42:43</td>\n",
+                            "      <td>301769</td>\n",
                             "      <td>Record added August 26 of 2021</td>\n",
-                            "      <td>2021/08/26 08:04:43</td>\n",
+                            "      <td>2021/08/26 08:42:43</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>6</th>\n",
-                            "      <td>2021/08/26 08:04:43</td>\n",
-                            "      <td>917142</td>\n",
+                            "      <td>2021/08/26 08:42:43</td>\n",
+                            "      <td>879650</td>\n",
                             "      <td>Record added August 26 of 2021</td>\n",
-                            "      <td>2021/08/26 08:04:43</td>\n",
+                            "      <td>2021/08/26 08:42:43</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>7</th>\n",
-                            "      <td>2021/08/26 08:04:43</td>\n",
-                            "      <td>227210</td>\n",
+                            "      <td>2021/08/26 08:42:43</td>\n",
+                            "      <td>737747</td>\n",
                             "      <td>Record added August 26 of 2021</td>\n",
-                            "      <td>2021/08/26 08:04:43</td>\n",
+                            "      <td>2021/08/26 08:42:43</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>8</th>\n",
-                            "      <td>2021/08/27 08:04:43</td>\n",
-                            "      <td>988481</td>\n",
+                            "      <td>2021/08/27 08:42:43</td>\n",
+                            "      <td>140170</td>\n",
                             "      <td>Record added August 27 of 2021</td>\n",
-                            "      <td>2021/08/27 08:04:43</td>\n",
+                            "      <td>2021/08/27 08:42:43</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>9</th>\n",
-                            "      <td>2021/08/27 08:04:43</td>\n",
-                            "      <td>771113</td>\n",
+                            "      <td>2021/08/27 08:42:43</td>\n",
+                            "      <td>246890</td>\n",
                             "      <td>Record added August 27 of 2021</td>\n",
-                            "      <td>2021/08/27 08:04:43</td>\n",
+                            "      <td>2021/08/27 08:42:43</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>10</th>\n",
-                            "      <td>2021/08/27 08:04:43</td>\n",
-                            "      <td>174643</td>\n",
+                            "      <td>2021/08/27 08:42:43</td>\n",
+                            "      <td>848615</td>\n",
                             "      <td>Record added August 27 of 2021</td>\n",
-                            "      <td>2021/08/27 08:04:43</td>\n",
+                            "      <td>2021/08/27 08:42:43</td>\n",
                             "    </tr>\n",
                             "    <tr>\n",
                             "      <th>11</th>\n",
-                            "      <td>2021/08/27 08:04:43</td>\n",
-                            "      <td>452992</td>\n",
+                            "      <td>2021/08/27 08:42:43</td>\n",
+                            "      <td>813903</td>\n",
                             "      <td>Record added August 27 of 2021</td>\n",
-                            "      <td>2021/08/27 08:04:43</td>\n",
+                            "      <td>2021/08/27 08:42:43</td>\n",
                             "    </tr>\n",
                             "  </tbody>\n",
                             "</table>\n",
@@ -213,7 +213,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 10
+                    "execution_count": 2
                 }
             ],
             "metadata": {}
@@ -227,7 +227,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 11,
+            "execution_count": 3,
             "source": [
                 "# String to Date/Time\n",
                 "df_sampledata['TEST_DATETIME'] = pd.to_datetime(df_sampledata['TEST_DATETIME'])\n",
@@ -247,7 +247,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 12,
+            "execution_count": 4,
             "source": [
                 "# List DataFrame columns\n",
                 "df_sampledata.columns\n",
@@ -267,7 +267,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 12
+                    "execution_count": 4
                 }
             ],
             "metadata": {}
@@ -281,10 +281,13 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 13,
+            "execution_count": 7,
             "source": [
+                "# Modify text field for use in a later example\n",
+                "df_excel = df_sampledata\n",
+                "df_excel = df_excel.replace('Record added ',\"Record added to Excel \", regex=True)\n",
                 "# Send DataFrame to Excel file\n",
-                "df_sampledata.to_excel('testtable_source.xlsx', index=False)"
+                "df_excel.to_excel('testtable_source.xlsx', index=False)"
             ],
             "outputs": [],
             "metadata": {}
@@ -300,8 +303,11 @@
             "cell_type": "code",
             "execution_count": 14,
             "source": [
+                "# Modify text field for use in a later example\n",
+                "df_csv = df_sampledata\n",
+                "df_csv = df_csv.replace('Record added ',\"Record added to CSV \", regex=True)\n",
                 "# Send DataFrame to CSV file\n",
-                "df_sampledata.to_csv('testtable_source.csv', index=False)"
+                "df_csv.to_csv('testtable_source.csv', index=False)"
             ],
             "outputs": [],
             "metadata": {}
