Oracle-Excel updated with Excel multi-sheet export

--- a/Excel-CSV.ipynb
+++ b/Excel-CSV.ipynb
@@ -14,12 +14,10 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 50,
+            "execution_count": 52,
             "source": [
                 "# Pandas for CSV/Excel manipulation\n",
-                "import pandas as pd\n",
-                "# Excel writer is needed when appending to an Excel spreadsheet\n",
-                "import xlsxwriter"
+                "import pandas as pd"
             ],
             "outputs": [],
             "metadata": {}
@@ -33,7 +31,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 35,
+            "execution_count": 53,
             "source": [
                 "# Create DataFrame from CSV\n",
                 "df_csv = pd.read_csv(\"testtable_source.csv\")\n",
@@ -189,7 +187,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 35
+                    "execution_count": 53
                 }
             ],
             "metadata": {}
@@ -203,7 +201,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 36,
+            "execution_count": 54,
             "source": [
                 "# Create DataFrame from Excel\n",
                 "df_excel = pd.read_excel(\"testtable_source.xlsx\", converters={'TEST_DATETIME':str, 'TEST_NUMBER':int, 'TEST_TEXT':str})\n",
@@ -359,7 +357,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 36
+                    "execution_count": 54
                 }
             ],
             "metadata": {}
@@ -373,7 +371,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 37,
+            "execution_count": 55,
             "source": [
                 "# List DataFrame columns\n",
                 "df_csv.columns\n",
@@ -393,7 +391,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 37
+                    "execution_count": 55
                 }
             ],
             "metadata": {}
@@ -407,7 +405,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 38,
+            "execution_count": 56,
             "source": [
                 "# List DataFrame columns\n",
                 "df_excel.columns\n",
@@ -427,7 +425,7 @@
                         ]
                     },
                     "metadata": {},
-                    "execution_count": 38
+                    "execution_count": 56
                 }
             ],
             "metadata": {}
@@ -441,7 +439,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 39,
+            "execution_count": 57,
             "source": [
                 "# Send CSV DataFrame to Excel file\n",
                 "df_csv.to_excel('testtable_csv_export.xlsx', index=False)"
@@ -458,7 +456,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 40,
+            "execution_count": 58,
             "source": [
                 "# Send Excel DataFrame to CSV file\n",
                 "df_excel.to_csv('testtable_excel_export.csv', index=False)"
@@ -475,7 +473,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 41,
+            "execution_count": 59,
             "source": [
                 "# String to Date/Time\n",
                 "df_excel['TEST_DATETIME'] = pd.to_datetime(df_excel['TEST_DATETIME'])\n",
@@ -508,7 +506,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 42,
+            "execution_count": 60,
             "source": [
                 "# Filter the CSV data\n",
                 "date_query = df_csv['TEST_DATETIME'] == date_oldest_csv\n",
@@ -528,7 +526,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 43,
+            "execution_count": 61,
             "source": [
                 "# Filter the Excel data\n",
                 "date_query = df_excel['TEST_DATETIME'] == date_newest_excel\n",
@@ -548,7 +546,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 44,
+            "execution_count": 62,
             "source": [
                 "# Append two DataFrames\n",
                 "df_excel_combined = df_excel.append(df_csv, ignore_index=True)\n",
