--- a/Oracle-Excel.ipynb
+++ b/Oracle-Excel.ipynb
@@ -8,6 +8,7 @@
                 "- Install Jupyter if not already installed: \"pip3 install Jupyter\"\n",
                 "- Next start a new Jupyter notebook (Cmd/Ctl Shift P): \"Jupyter: Create New Blank Notebook\"\n",
                 "- Install \"pip3 install pandas\" and to be able to read Excel files \"pip3 install openpyxl\"\n",
+                "- Install \"pip3 install xlsxwriter\" and to be able to append Excel files\n",
                 "- Install \"pip3 install SQLAlchemy\" and \"pip3 install cx_Oracle\" for Oracle connectivity\n",
                 "- Review Oracle ODBC setup in pythonoracle_odbc.py (this example uses ODBC)"
             ],
@@ -143,6 +144,30 @@
         {
             "cell_type": "markdown",
             "source": [
+                "# Oracle Oldest and Latest Dates"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "source": [
+                "# String to Date/Time\n",
+                "df_oracle['test_datetime'] = pd.to_datetime(df_oracle['test_datetime'])\n",
+                "df_oracle['test_datetime'] = pd.to_datetime(df_oracle['test_datetime'])\n",
+                "# Get oldest Oracle date\n",
+                "date_oldest = df_oracle['test_datetime'].min()\n",
+                "print (\"Oldest Oracle date is: \" + str(date_oldest))\n",
+                "# Get newest Oracle date\n",
+                "date_newest = df_oracle['test_datetime'].max()\n",
+                "print (\"Newest Oracle date is: \" + str(date_newest))"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
                 "# Write Oracle transform to Excel"
             ],
             "metadata": {}
@@ -152,10 +177,10 @@
             "execution_count": null,
             "source": [
                 "# Filter the Oracle data\n",
-                "date_query = (df_oracle['test_datetime'] >= \"2021/08/25\") & (df_oracle['test_datetime'] < \"2021/08/26\")\n",
-                "df_filtered_oracle = df_oracle.query('@date_query')\n",
+                "date_query = (df_oracle['test_datetime'] >= date_oldest) & (df_oracle['test_datetime'] < date_oldest)\n",
+                "df_filtered_oracle_old = df_oracle.query('@date_query')\n",
                 "# Send part part of the Oracle filtered DataFrame to Excel file\n",
-                "df_filtered_oracle.to_excel('testtable_transformed_oracle_export.xlsx', index=False, columns=['test_datetime', 'test_number'])"
+                "df_filtered_oracle_old.to_excel('testtable_transformed_oracle_export.xlsx', index=False, columns=['test_datetime', 'test_number'])"
             ],
             "outputs": [],
             "metadata": {}
@@ -172,10 +197,32 @@
             "execution_count": null,
             "source": [
                 "# Filter the Oracle data\n",
-                "date_query = (df_oracle['test_datetime'] >= \"2021/08/25\") & (df_oracle['test_datetime'] < \"2021/08/26\")\n",
-                "df_filtered_oracle = df_oracle.query('@date_query')\n",
+                "date_query = (df_oracle['test_datetime'] >= date_newest) & (df_oracle['test_datetime'] < date_newest)\n",
+                "df_filtered_oracle_new = df_oracle.query('@date_query')\n",
                 "# Send part part of the Oracle filtered DataFrame to CSV file\n",
-                "df_filtered_oracle.to_csv('testtable_transformed_oracle_export.csv', index=False, columns=['test_datetime', 'test_number'])"
+                "df_filtered_oracle_new.to_csv('testtable_transformed_oracle_export.csv', index=False, columns=['test_datetime', 'test_number'])"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "# Write Two Seperate Data Sets to Excel in Seperate Sheets"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "source": [
+                "# Start Excel Writer to allow us to append\n",
+                "Excelwriter = pd.ExcelWriter(\"testtable_oraclesheets_export.xlsx\", engine=\"xlsxwriter\")\n",
+                "# Using the same filter data was used for the transforms, this time with all columns\n",
+                "df_filtered_oracle_old.to_excel(Excelwriter, sheet_name=\"OldData\", index=False)\n",
+                "df_filtered_oracle_new.to_excel(Excelwriter, sheet_name=\"NEwData\", index=False)\n",
+                "# Save Excel file\n",
+                "Excelwriter.save()"
             ],
             "outputs": [],
             "metadata": {}
