Oracle to Excel multi-sheet added

--- a/Excel-CSV.ipynb
+++ b/Excel-CSV.ipynb
@@ -8,7 +8,7 @@
                 "- Install Jupyter if not already installed: \"pip3 install Jupyter\"\n",
                 "- Next start a new Jupyter notebook (Cmd Shift P): \"Jupyter: Create New Blank Notebook\"\n",
                 "- Install \"pip3 install pandas\" and to be able to read Excel files \"pip3 install openpyxl\"\n",
-                "- Install \"pip3 install xlsxwriter\" and to be able to append Excel files"
+                "- Install \"pip3 install XlsxWriter\" and to be able to append Excel files"
             ],
             "metadata": {}
         },
