--- a/Oracle-Excel.ipynb
+++ b/Oracle-Excel.ipynb
@@ -8,7 +8,7 @@
                 "- Install Jupyter if not already installed: \"pip3 install Jupyter\"\n",
                 "- Next start a new Jupyter notebook (Cmd/Ctl Shift P): \"Jupyter: Create New Blank Notebook\"\n",
                 "- Install \"pip3 install pandas\" and to be able to read Excel files \"pip3 install openpyxl\"\n",
-                "- Install \"pip3 install xlsxwriter\" and to be able to append Excel files\n",
+                "- Install \"pip3 install XlsxWriter\" and to be able to append Excel files\n",
                 "- Install \"pip3 install SQLAlchemy\" and \"pip3 install cx_Oracle\" for Oracle connectivity\n",
                 "- Review Oracle ODBC setup in pythonoracle_odbc.py (this example uses ODBC)"
             ],
@@ -20,6 +20,8 @@
             "source": [
                 "# Pandas for CSV/Excel manipulation\n",
                 "import pandas as pd\n",
+                "# Used to get the current date/time\n",
+                "from datetime import datetime\n",
                 "# Library to talk with Oracle, requires Python cx_Oracle module and the Oracle Instant Client to be installed on host\n",
                 "from sqlalchemy import create_engine"
             ],
@@ -177,7 +179,7 @@
             "execution_count": null,
             "source": [
                 "# Filter the Oracle data\n",
-                "date_query = (df_oracle['test_datetime'] >= date_oldest) & (df_oracle['test_datetime'] < date_oldest)\n",
+                "date_query = df_oracle['test_datetime'] == date_oldest\n",
                 "df_filtered_oracle_old = df_oracle.query('@date_query')\n",
                 "# Send part part of the Oracle filtered DataFrame to Excel file\n",
                 "df_filtered_oracle_old.to_excel('testtable_transformed_oracle_export.xlsx', index=False, columns=['test_datetime', 'test_number'])"
@@ -197,7 +199,7 @@
             "execution_count": null,
             "source": [
                 "# Filter the Oracle data\n",
-                "date_query = (df_oracle['test_datetime'] >= date_newest) & (df_oracle['test_datetime'] < date_newest)\n",
+                "date_query = df_oracle['test_datetime'] == date_newest\n",
                 "df_filtered_oracle_new = df_oracle.query('@date_query')\n",
                 "# Send part part of the Oracle filtered DataFrame to CSV file\n",
                 "df_filtered_oracle_new.to_csv('testtable_transformed_oracle_export.csv', index=False, columns=['test_datetime', 'test_number'])"
@@ -220,7 +222,7 @@
                 "Excelwriter = pd.ExcelWriter(\"testtable_oraclesheets_export.xlsx\", engine=\"xlsxwriter\")\n",
                 "# Using the same filter data was used for the transforms, this time with all columns\n",
                 "df_filtered_oracle_old.to_excel(Excelwriter, sheet_name=\"OldData\", index=False)\n",
-                "df_filtered_oracle_new.to_excel(Excelwriter, sheet_name=\"NEwData\", index=False)\n",
+                "df_filtered_oracle_new.to_excel(Excelwriter, sheet_name=\"NewData\", index=False)\n",
                 "# Save Excel file\n",
                 "Excelwriter.save()"
             ],
