Updated with 2 data sources

--- a/Excel-Oracle.ipynb
+++ b/Excel-Oracle.ipynb
@@ -15,7 +15,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 1,
+            "execution_count": null,
             "source": [
                 "# Pandas for CSV/Excel manipulation\n",
                 "import pandas as pd\n",
@@ -45,86 +45,26 @@
                 "# View your new DataFrame\n",
                 "df_excel"
             ],
-            "outputs": [
-                {
-                    "output_type": "execute_result",
-                    "data": {
-                        "text/plain": [
-                            "         TEST_DATETIME  TEST_NUMBER                       TEST_TEXT  \\\n",
-                            "0  2021/08/25 19:10:28       902246  Record added August 25 of 2021   \n",
-                            "1  2021/08/25 19:10:28       849084  Record added August 25 of 2021   \n",
-                            "2  2021/08/25 19:10:28       390490  Record added August 25 of 2021   \n",
-                            "3  2021/08/25 19:10:28       563009  Record added August 25 of 2021   \n",
-                            "\n",
-                            "          RECORD_ADDED  \n",
-                            "0  2021/08/25 19:10:28  \n",
-                            "1  2021/08/25 19:10:28  \n",
-                            "2  2021/08/25 19:10:28  \n",
-                            "3  2021/08/25 19:10:28  "
-                        ],
-                        "text/html": [
-                            "<div>\n",
-                            "<style scoped>\n",
-                            "    .dataframe tbody tr th:only-of-type {\n",
-                            "        vertical-align: middle;\n",
-                            "    }\n",
-                            "\n",
-                            "    .dataframe tbody tr th {\n",
-                            "        vertical-align: top;\n",
-                            "    }\n",
-                            "\n",
-                            "    .dataframe thead th {\n",
-                            "        text-align: right;\n",
-                            "    }\n",
-                            "</style>\n",
-                            "<table border=\"1\" class=\"dataframe\">\n",
-                            "  <thead>\n",
-                            "    <tr style=\"text-align: right;\">\n",
-                            "      <th></th>\n",
-                            "      <th>TEST_DATETIME</th>\n",
-                            "      <th>TEST_NUMBER</th>\n",
-                            "      <th>TEST_TEXT</th>\n",
-                            "      <th>RECORD_ADDED</th>\n",
-                            "    </tr>\n",
-                            "  </thead>\n",
-                            "  <tbody>\n",
-                            "    <tr>\n",
-                            "      <th>0</th>\n",
-                            "      <td>2021/08/25 19:10:28</td>\n",
-                            "      <td>902246</td>\n",
-                            "      <td>Record added August 25 of 2021</td>\n",
-                            "      <td>2021/08/25 19:10:28</td>\n",
-                            "    </tr>\n",
-                            "    <tr>\n",
-                            "      <th>1</th>\n",
-                            "      <td>2021/08/25 19:10:28</td>\n",
-                            "      <td>849084</td>\n",
-                            "      <td>Record added August 25 of 2021</td>\n",
-                            "      <td>2021/08/25 19:10:28</td>\n",
-                            "    </tr>\n",
-                            "    <tr>\n",
-                            "      <th>2</th>\n",
-                            "      <td>2021/08/25 19:10:28</td>\n",
-                            "      <td>390490</td>\n",
-                            "      <td>Record added August 25 of 2021</td>\n",
-                            "      <td>2021/08/25 19:10:28</td>\n",
-                            "    </tr>\n",
-                            "    <tr>\n",
-                            "      <th>3</th>\n",
-                            "      <td>2021/08/25 19:10:28</td>\n",
-                            "      <td>563009</td>\n",
-                            "      <td>Record added August 25 of 2021</td>\n",
-                            "      <td>2021/08/25 19:10:28</td>\n",
-                            "    </tr>\n",
-                            "  </tbody>\n",
-                            "</table>\n",
-                            "</div>"
-                        ]
-                    },
-                    "metadata": {},
-                    "execution_count": 2
-                }
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "# Read CSV file"
             ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "source": [
+                "# Create DataFrame from CSV\n",
+                "df_csv = pd.read_csv(\"testtable_source.csv\", converters={'TEST_DATETIME':str, 'TEST_NUMBER':int, 'TEST_TEXT':str, 'RECORD_ADDED':str})\n",
+                "# View your new DataFrame\n",
+                "df_csv"
+            ],
+            "outputs": [],
             "metadata": {}
         },
         {
@@ -150,7 +90,27 @@
         {
             "cell_type": "markdown",
             "source": [
-                "# Update Record Added Fields"
+                "# CSV Columns Rename"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "source": [
+                "# Rename fields to match database (if needed)\n",
+                "df_csv.rename(columns = {'TEST_DATETIME':'test_datetime', }, inplace = True)\n",
+                "df_csv.rename(columns = {'TEST_NUMBER':'test_number', }, inplace = True)\n",
+                "df_csv.rename(columns = {'TEST_TEXT':'test_text', }, inplace = True)\n",
+                "df_csv.rename(columns = {'RECORD_ADDED':'record_added', }, inplace = True)"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "# Excel Update Record Added Fields"
             ],
             "metadata": {}
         },
@@ -169,7 +129,26 @@
         {
             "cell_type": "markdown",
             "source": [
-                "# Convert Date/Time Fields from String"
+                "# CSV Update Record Added Fields"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "source": [
+                "# Get the current date/time\n",
+                "now_is = datetime.now().strftime(\"%Y/%m/%d %H:%M:%S\")\n",
+                "# Populate the updated date/time\n",
+                "df_csv['record_added'] = now_is"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "# Excel Convert Date/Time Fields from String"
             ],
             "metadata": {}
         },
@@ -180,6 +159,24 @@
                 "# String to Date/Time\n",
                 "df_excel['test_datetime'] = pd.to_datetime(df_excel['test_datetime'])\n",
                 "df_excel['record_added'] = pd.to_datetime(df_excel['record_added'])"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "# CSV Convert Date/Time Fields from String"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "source": [
+                "# String to Date/Time\n",
+                "df_csv['test_datetime'] = pd.to_datetime(df_excel['test_datetime'])\n",
+                "df_csv['record_added'] = pd.to_datetime(df_excel['record_added'])"
             ],
             "outputs": [],
             "metadata": {}
@@ -216,6 +213,25 @@
                     "execution_count": 6
                 }
             ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "markdown",
+            "source": [
+                "# CSV Columns"
+            ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "source": [
+                "# List DataFrame columns\n",
+                "df_csv.columns\n",
+                "# List field types\n",
+                "df_csv.convert_dtypes().dtypes"
+            ],
+            "outputs": [],
             "metadata": {}
         },
         {
@@ -284,7 +300,7 @@
         {
             "cell_type": "markdown",
             "source": [
-                "# Optional way to Append Excel to Oracle if unable to map data types in DataFrame"
+                "# Append CSV to Oracle"
             ],
             "metadata": {}
         },
@@ -292,10 +308,8 @@
             "cell_type": "code",
             "execution_count": null,
             "source": [
-                "# Build dictory for data mapping\n",
-                "df_excel_oracle_mapfields = dict({'test_datetime': sqlalchemy.DateTime(), 'test_number': sqlalchemy.types.INTEGER(), 'test_text': sqlalchemy.types.VARCHAR(length=50), 'record_added': sqlalchemy.DateTime()})\n",
-                "# Append Excel DataFrame to Oracle table using data mapping\n",
-                "df_excel.to_sql(oracle_table, db_inst, if_exists='append', index=False, dtype=df_excel_oracle_mapfields)"
+                "# Append CSV DataFrame to Oracle table\n",
+                "df_csv.to_sql(oracle_table, db_inst, if_exists='append', index=False)"
             ],
             "outputs": [],
             "metadata": {}
