--- a/Excel-FTP.ipynb
+++ b/Excel-FTP.ipynb
@@ -220,12 +220,12 @@
                 "ftp.cwd(ftp_path)\n",
                 "# FTP build buffer\n",
                 "ftp_buffer = StringIO.StringIO()\n",
-                "df_excel.to_csv(ftp_buffer)\n",
+                "df_excel.to_csv(ftp_buffer) ### REALLY WANT TO SEND AS EXCEL!\n",
                 "ftp_text = ftp_buffer.getvalue()\n",
                 "ftp_payload = io.BytesIO(str.encode(ftp_text))\n",
                 "# FTP send DataFrame as a file\n",
                 "ftp_store_command = \"STOR \" + excel_filename\n",
-                "ftp.storbinary(ftp_store_command, ftp_payload)"
+                "ftp.storbinary(ftp_store_command, ftp_payload) ### NOT WORKING!"
             ],
             "outputs": [],
             "metadata": {}
